# ProjectELF

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
elf-test-files/: helloworld
elf-test-files/corrupted-helloworld/: e_phentsize_corrupted  e_phoff_out_of_bounds  e_phoff_overlapping_header  e_shentsize_corrupted  e_shoff_out_of_bounds  e_shoff_overlapping_header  invalid_class  invalid_data  invalid_e_ehsize  invalid_e_shstrndx  invalid_e_version  invalid_ei_version  invalid_mag0  large_number_of_sections  large_number_of_segments  section_out_of_bounds  section_overlapping  segment_out_of_bounds  shstrtab_not_ending_with_zero  shstrtab_not_starting_with_zero  wrong_ei_class  wrong_ei_data
ext/gtest/: CMakeLists.txt  CMakeLists.txt.in
include/: version.h
include/core/: Bindable.h  ELFIssueConverter.h  ELFValueConverter.h  ELFValueConvertor.h  Hoverable.h  IContains.h  IMouseListener.h  IVerticalBinaryTreeNode.h  ModelBase.h  Side.h  VerticalBinaryTree.h
include/core/models/: ELFHeaderModelItem.h  ELFIndexedModelItem.h  ELFIssueListModel.h  ELFModel.h  ELFModelItem.h  ELFProgramHeaderListModel.h  ELFProgramHeaderModelItem.h  ELFProgramHeaderTableModelItem.h  ELFSectionHeaderListModel.h  ELFSectionHeaderModelItem.h  ELFSectionHeaderTableModelItem.h  ELFSectionModelItem.h  ELFSegmentModelItem.h  ListModelBase.h  ModelHelpers.h  OpenFilesModel.h
include/gui/diagram/: CondensedDiagramLayout.h  Connection.h  ConnectionPoint.h  DiagramELFNode.h  DiagramHeaderNode.h  DiagramLayout.h  DiagramModel.h  DiagramModelItem.h  DiagramNode.h  DiagramProgramHeaderArrayNode.h  DiagramScene.h  DiagramSectionHeadersNode.h  DiagramStyle.h  IDiagramMouseListener.h  ProportionalDiagramLayout.h
include/gui/diagram/nodes/: DiagramELFNode.h  DiagramHeaderNode.h  DiagramProgramHeaderNode.h  DiagramProgramHeaderTableNode.h  DiagramSectionHeaderNode.h  DiagramSectionHeaderTableNode.h  DiagramSectionNode.h  DiagramSegmentNode.h  DiagramTableNode.h
libelf/: CMakeLists.txt
libelf/include/: Dummy.h  ELF.h  ELFHeader.h  ELFHeaderImpl.h  ELFIssue.h  ELFIssueException.h  ELFIssuesBySeverity.h  ELFParseException.h  ELFProgramHeader.h  ELFProgramHeaderImpl.h  ELFReader.h  ELFSectionHeader.h  ELFSectionHeaderImpl.h  ELFStructureBase.h  ELFTypes.h  ELFUtils.h  ELFWriter.h  IRawParsable.h
libelf/src/: Dummy.cpp  ELF.cpp  ELFHeader.cpp  ELFIssue.cpp  ELFIssuesBySeverity.cpp  ELFProgramHeader.cpp  ELFReader.cpp  ELFSectionHeader.cpp  ELFStructureBase.cpp  ELFWriter.cpp
libelf/tests/: ELFIssuesBySeverityTest.cpp  ELFReaderTest.cpp  ELFTest.cpp  Memstream.h  MemstreamTest.cpp  test.cpp
libelf/tests/resources/: elf_header.hex  fdas  helloworld2
src/core/: ELFIssueConverter.cpp  ELFValueConverter.cpp  ELFValueConvertor.cpp  Hoverable.cpp  ModelBase.cpp
src/core/models/: ELFHeaderModelItem.cpp  ELFIndexedModelItem.cpp  ELFIssueListModel.cpp  ELFModel.cpp  ELFModelItem.cpp  ELFProgramHeaderListModel.cpp  ELFProgramHeaderModelItem.cpp  ELFProgramHeaderTableModelItem.cpp  ELFSectionHeaderListModel.cpp  ELFSectionHeaderModelItem.cpp  ELFSectionHeaderTableModelItem.cpp  ELFSectionModelItem.cpp  ELFSegmentModelItem.cpp  ListModelBase.cpp  OpenFilesModel.cpp
src/gui/: main.cpp  qml.qrc
src/gui/diagram/: CondensedDiagramLayout.cpp  Connection.cpp  ConnectionPoint.cpp  DiagramELFNode.cpp  DiagramHeaderNode.cpp  DiagramLayout.cpp  DiagramModel.cpp  DiagramModelItem.cpp  DiagramNode.cpp  DiagramProgramHeaderArrayNode.cpp  DiagramScene.cpp  DiagramSectionHeadersNode.cpp  ProportionalDiagramLayout.cpp
src/gui/diagram/nodes/: DiagramELFNode.cpp  DiagramHeaderNode.cpp  DiagramProgramHeaderNode.cpp  DiagramProgramHeaderTableNode.cpp  DiagramSectionHeaderNode.cpp  DiagramSectionHeaderTableNode.cpp  DiagramSectionNode.cpp  DiagramSegmentNode.cpp
src/gui/qml/: main.qml
src/gui/qml/components/: BasicInfoPane.qml  DiagramPane.qml  FilePane.qml  FileTabButton.qml  HeaderEditTable.qml  IdentificationEditTable.qml  IssueItem.qml  MainMenuBar.qml  MenuPrimary.qml  PEButton.qml  PEClosableTabButton.qml  PEProgressBar.qml  PETabBar.qml  ProgramHeaderEditTable.qml  ProgramHeadersEdit.qml  SectionHeaderEditTable.qml  SectionHeadersEdit.qml  StatusBar.qml  StatusBarText.qml  ViewEdit.qml  ViewOverview.qml  ViewSwitchButtons.qml
src/gui/qml/controls/: PEBadge.qml  PEButton.qml  PEClosableTabButton.qml  PEDropdown.qml  PEExpandablePane.qml  PEGroupBox.qml  PEKeyValue.qml  PEMenuSeparator.qml  PEProgressBar.qml  PESplitView.qml  PEStatusBarButton.qml  PEStatusBarText.qml  PETabBar.qml  PETable.qml  PETableCell.qml  PETableEditableCell.qml  PETableHeader.qml  PETermDefinition.qml  PEToolBar.qml  PEToolBarButton.qml  PEToolBarText.qml  Spacer.qml
src/gui/qml/js/: utils.js
src/gui/qml/singletons/: Style.qml  View.qml  qmldir
tests/: test.cpp
tests/core/: BindableTest.cpp  VerticalBinaryTreeTest.cpp
